# medsystem-test

./: .env.example  Makefile  conftest.py  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: ci.yml
apps/a12n/: apps.py
apps/a12n/tests/api/v1/: test_jwt_obtain.py
apps/admins/: factory.py  fixtures.py  models.py
apps/admins/migrations/: 0001_initial.py  0002_initial.py
apps/encounters/: factory.py  fixtures.py  models.py
apps/encounters/api/v1/ehr/: filters.py  serializers.py  urls.py  views.py
apps/encounters/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py
apps/encounters/tests/api/v1/ehr/encounters/: test_ordering.py
apps/encounters/tests/api/v1/ehr/encounters/actions/: test_create.py  test_destroy.py  test_list.py  test_retrieve.py  test_update.py
apps/encounters/tests/api/v1/ehr/encounters/filters/: test_created_at_filter.py  test_patient_filter.py  test_practitioner_filter.py  test_status_filter.py
apps/locations/: factory.py  fixtures.py  models.py
apps/locations/api/v1/ehr/: serializers.py
apps/patients/: factory.py  fixtures.py  models.py
apps/patients/api/v1/ehr/: serializers.py
apps/patients/migrations/: 0001_initial.py  0002_initial.py
apps/practitioners/: apps.py  factory.py  fixtures.py  models.py
apps/practitioners/api/v1/ehr/: serializers.py
apps/practitioners/migrations/: 0001_initial.py  0002_initial.py
apps/users/: factory.py
apps/users/migrations/: 0001_initial.py
core/: models.py  settings.py  urls.py
core/api/: permissions.py  renderers.py  views.py
core/conf/: api.py  apps.py  auth.py  boilerplate.py  db.py  email.py  environ.py  http.py  lang.py  static.py  templates.py  timezone.py
core/factories/: __init__.py  faker.py
core/fixtures/: __init__.py  api.py  dt.py  factory.py
core/testing/: __init__.py  api.py  factories.py
core/tests/: test_deadfixtures.py
core/tests/models/full_name_model/: test_full_name.py
